[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TopBar" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 60.0
color = Color( 0.1, 0.1, 0.1, 0.8 )

[node name="MoneyLabel" type="Label" parent="TopBar"]
margin_left = 20.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
text = "Money: $200"

[node name="LivesLabel" type="Label" parent="TopBar"]
margin_left = 220.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 0.2, 0.2, 1 )
text = "Lives: 20"

[node name="WaveLabel" type="Label" parent="TopBar"]
margin_left = 420.0
margin_top = 10.0
margin_right = 600.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.5, 0.8, 1, 1 )
text = "Wave: 1"

[node name="TowerMenu" type="Panel" parent="."]
margin_left = 20.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 300.0

[node name="Label" type="Label" parent="TowerMenu"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 40.0
text = "Build Towers:"

[node name="BasicTowerButton" type="Button" parent="TowerMenu"]
margin_left = 10.0
margin_top = 50.0
margin_right = 190.0
margin_bottom = 90.0
text = "Basic Tower - $100"

[node name="SniperTowerButton" type="Button" parent="TowerMenu"]
margin_left = 10.0
margin_top = 100.0
margin_right = 190.0
margin_bottom = 140.0
text = "Sniper Tower - $200"
